--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Git Container",
-    "version": "1.0.2",
+    "name": "Travel Container",
+    "version": "1.0.0",
 
-    "description": "Git Container isolates your Git hosting service activity from the rest of your web activity in order to prevent these services from tracking you via third party cookies.",
+    "description": "Travel Container isolates your Travel service activity from the rest of your web activity in order to prevent these services from tracking you via third party cookies.",
 
     "icons": {
         "48": "icon.png",
@@ -12,12 +12,12 @@
 
     "applications": {
       "gecko": {
-        "id": "@contain-git",
+        "id": "@contain-travel",
         "strict_min_version": "57.0"
       }
     },
 
-    "homepage_url": "https://github.com/SleepingPanda/contain-git",
+    "homepage_url": "https://github.com/netravnen/contain-travel",
 
     "permissions": [
         "<all_urls>",
